--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -88,6 +88,7 @@
                     class="control-select w-full px-3 py-2 border border-gray-300 rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
                 >
                     <option value="demo">demo</option>
+                    <option value="demo2">demo2</option>
                 </select>
                 
                 <div class="pt-2 border-t border-gray-200">
