横瀬地峡も撮影できるように、細かな修正

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -87,6 +87,7 @@
                 >
                     <option value="demo1">demo1</option>
                     <option value="demo2">demo2</option>
+                    <option value="yokoze-last">yokoze-last</option>
                 </select>
                 
                 <div class="pt-2 border-t border-gray-200">
