npns-e1も撮影してみる

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -88,6 +88,10 @@
                     <option value="demo1">demo1</option>
                     <option value="demo2">demo2</option>
                     <option value="yokoze-last">yokoze-last</option>
+                    <option value="npns-e1-1909">npns-e1-1909</option>
+                    <option value="npns-e1-1954">npns-e1-1954</option>
+                    <option value="npns-e1-1982">npns-e1-1982</option>
+                    <option value="npns-e1-2029">npns-e1-2029</option>
                 </select>
                 
                 <div class="pt-2 border-t border-gray-200">
