熊谷を撮影しようと試行錯誤

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -88,6 +88,7 @@
                     <option value="demo1">demo1</option>
                     <option value="demo2">demo2</option>
                     <option value="yokoze-last">yokoze-last</option>
+                    <option value="kumagaya-last">kumagaya-last</option>
                     <option value="npns-e1-1909">npns-e1-1909</option>
                     <option value="npns-e1-1954">npns-e1-1954</option>
                     <option value="npns-e1-1982">npns-e1-1982</option>
