--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -14,7 +14,11 @@
     
     <!-- Vue.js 3 -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    
+   
+    <!-- GoatCounter -->
+    <script data-goatcounter="https://sou7.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
     <style>
         html, body {
             margin: 0;
